--- a/Balls/Assembly-CSharp-vs.csproj
+++ b/Balls/Assembly-CSharp-vs.csproj
@@ -47,7 +47,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Main_menu.cs" />
+     <Compile Include="Assets\Scripts\Ray_C.cs" />
      <Compile Include="Assets\Scripts\Spawner.cs" />
+     <Compile Include="Assets\Scripts\bad_goose.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
