--- a/Balls/Assembly-CSharp.csproj
+++ b/Balls/Assembly-CSharp.csproj
@@ -48,7 +48,10 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\ClickOnTheBall.cs" />
      <Compile Include="Assets\Scripts\EndLevel.cs" />
+     <Compile Include="Assets\Scripts\GameOver.cs" />
+     <Compile Include="Assets\Scripts\GameTimer.cs" />
      <Compile Include="Assets\Scripts\MainMenu.cs" />
+     <Compile Include="Assets\Scripts\Score.cs" />
      <Compile Include="Assets\Scripts\Spawner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
